--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "strict": false,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictNullChecks": true,
     "moduleResolution": "node",
     "module": "es6",
     "target": "esnext",
