--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "strict": false,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "alwaysStrict": true,
     "strictNullChecks": true,
